# constexpr-static-matrix

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  MatrixUtils.hpp  StaticMatrix.hpp
tests/: CMakeLists.txt  main.cpp
