
set(CONSTEXPR_STATIC_MATRIX_TARGET_NAME ${PROJECT_NAME})

add_library(${CONSTEXPR_STATIC_MATRIX_TARGET_NAME} INTERFACE)
add_library(${CONSTEXPR_STATIC_MATRIX_TARGET_NAME}::${CONSTEXPR_STATIC_MATRIX_TARGET_NAME} ALIAS ${CONSTEXPR_STATIC_MATRIX_TARGET_NAME})

target_compile_features(${CONSTEXPR_STATIC_MATRIX_TARGET_NAME} INTERFACE cxx_std_20)
target_include_directories(${CONSTEXPR_STATIC_MATRIX_TARGET_NAME} INTERFACE
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/>)
